# ctf_scapper

./: .gitignore  CONTRIBUTING.md  COOKIE_EXTRACTION_GUIDE.md  DO_I_NEED_COOKIE.md  GET_ALL_COOKIES.md  GET_FRESH_COOKIES.md  HOW_TO_USE.txt  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.txt  README.bn.md  README.md  READY_TO_USE.md  READY_TO_USE_COMMAND.txt  SUMMARY.md  UNIVERSAL_SCRAPER_GUIDE.md  WHICH_SCRAPER_TO_USE.md  WHY_NOT_WORKING.md  check_cookies.py  config.example.yaml  ctf_scraper.py  ctf_scraper_ultimate.py  ctfd_scraper.py  direct_scraper.py  examples.sh  generic_scraper.py  picoctf_scraper.py  pyproject.toml  requirements.txt  scrape_ctf.sh  scraper_base.py  test_final.py  test_step_by_step.py  test_with_full_headers.py
.github/workflows/: test.yml
test_run/: HOW_TO_USE.txt  SUMMARY.txt  TEST_GUIDE.md
tests/: test_cookies.py  test_platform.py  test_rctf.py  test_sanitize.py  test_state.py
